kyy-k8s-config/dev/app/php/php-kaoyayacom/php-kaoyayacom-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: php-kaoyayacom
  name: php-kaoyayacom
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    app: php-kaoyayacom
